test/analyzer/input_programs/invalid_programs/program21.tea
# Valid assignment to declared variable
# with proper type
a := 10
a = 10 + 34 * 2

# Invalid assignment due to improper type

a = "won't work"